docker support added - readme and license docs added to sln
refactor to microservices pending...

--- a/aspnetcoredocs-tutorials-mod/first-web-api/samples/5.x/TodoService/TodoService.csproj
+++ b/aspnetcoredocs-tutorials-mod/first-web-api/samples/5.x/TodoService/TodoService.csproj
@@ -4,9 +4,11 @@
     <TargetFramework>net5.0</TargetFramework>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\TodoApiDTO</DockerfileContext>
+    <UserSecretsId>02510415-a7d3-4e53-baee-f73086a309d3</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
