--- a/aspnetcoredocs-tutorials-mod/first-web-api/samples/5.x/TodoApiDTO/Properties/launchSettings.json
+++ b/aspnetcoredocs-tutorials-mod/first-web-api/samples/5.x/TodoApiDTO/Properties/launchSettings.json
@@ -7,6 +7,13 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:51278;http://localhost:51279"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
