refactor - IN PROGRESS - api calls internal service api - HttpClient X bugs
issues with HttpClient Json .NET extensions throwing exceptions for valid responses...

--- a/aspnetcoredocs-tutorials-mod/first-web-api/samples/5.x/TodoApiDTO/Properties/launchSettings.json
+++ b/aspnetcoredocs-tutorials-mod/first-web-api/samples/5.x/TodoApiDTO/Properties/launchSettings.json
@@ -4,7 +4,8 @@
          "commandName": "Project",
          "launchBrowser": true,
          "environmentVariables": {
-            "ASPNETCORE_ENVIRONMENT": "Development"
+            "ASPNETCORE_ENVIRONMENT": "Development",
+            "TODO_SERVICE_BASE_URL": "https://localhost:5101"
          },
          "applicationUrl": "https://localhost:51278;http://localhost:51279"
       },
