--- a/aspnetcoredocs-tutorials-mod/first-web-api/samples/5.x/TodoApiDTO/TodoApi.csproj
+++ b/aspnetcoredocs-tutorials-mod/first-web-api/samples/5.x/TodoApiDTO/TodoApi.csproj
@@ -8,8 +8,6 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.0-alpha.1.20417.8" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.0-alpha.1.20417.8" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0-alpha.1.20417.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.0-alpha.1.20417.8">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -18,6 +16,10 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.0-rc.1.20458.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
     <PackageReference Include="System.IO.Pipelines" Version="5.0.0-rc.2.20454.25" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TodoModel\TodoModel.csproj" />
   </ItemGroup>
 
 </Project>
