--- a/aspnetcoredocs-tutorials-mod/first-web-api/samples/5.x/TodoService/TodoService.csproj
+++ b/aspnetcoredocs-tutorials-mod/first-web-api/samples/5.x/TodoService/TodoService.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -8,8 +8,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.0-alpha.1.20417.8" />
+     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.0-alpha.1.20417.8">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+     </PackageReference>
+     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.0-rc.1.20458.1" />
+     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
+     <PackageReference Include="System.IO.Pipelines" Version="5.0.0-rc.2.20454.25" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TodoModel\TodoModel.csproj" />
   </ItemGroup>
 
 </Project>
